# adventofcode

./: README.md
2024/: meson.build
2024/cpp/src/02/: 1.cpp  2.cpp
2024/cpp/src/03/: 1.cpp
2024/cpp/src/06/: 1.cpp
2024/cpp/src/07/: 1.cpp
2024/cpp/src/08/: 1.cpp
2024/cpp/src/09/: 2.cpp
2024/cpp/src/10/: 1.cpp  2.cpp
2024/rust/: Cargo.toml
2024/src/: 01.cpp  util.cpp
2024/src/01/: 1.cpp  2.cpp
2024/src/02/: 1.cpp  2.cpp
2024/src/03/: 1.cpp  2.cpp
2024/src/04/: 1.cpp  2.cpp
2024/src/05/: 1.cpp  2.cpp
2024/src/06/: 1.cpp  2.cpp
2024/src/07/: 1.cpp  2.cpp
2024/src/08/: 1.cpp  2.cpp
2024/src/09/: 1.cpp  2.cpp
2024/src/10/: 1.cpp  2.cpp
2024/src/include/: day.hpp  util.hpp
cpp/2024/: flake.nix  meson.build
cpp/2024/src/: util.cpp
cpp/2024/src/01/: 2.cpp
cpp/2024/src/03/: 2.cpp
cpp/2024/src/04/: 1.cpp
cpp/2024/src/05/: 1.cpp  2.cpp
cpp/2024/src/include/: util.hpp
futhark/: flake.nix
futhark/scripts/: measure.sh  run.sh
futhark/src/24/22/1/: input.sh  main.fut
rust/: .gitignore  Cargo.toml  flake.nix
rust/.cargo/: config.toml
rust/dhat_view/: README.md  dh_view.html
rust/proc_lib/: Cargo.toml
rust/proc_lib/src/: lib.rs
rust/scripts/: measure.sh  profile.sh
rust/solutions/: Cargo.toml
rust/src/: lib.rs
rust/util/: Cargo.toml
rust/util/src/: cache.rs  lib.rs
